--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "base-shell": "^2.5.10",
+    "crypto-browserify": "^3.12.0",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
     "firebase-function-tools": "^2.0.1",
     "firebase-functions": "^4.4.1",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
     "intl": "^1.2.5",
     "jss-rtl": "^0.3.0",
     "lp-react-virtualized-auto-sizer-react-18": "^1.0.7",
     "material-ui-shell": "^3.4.13",
+    "mongodb": "^5.6.0",
     "nodemon": "^2.0.22",
     "notistack": "^2.0.8",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
@@ -28,7 +33,9 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "react-window": "^1.8.9"
+    "react-window": "^1.8.9",
+    "url": "^0.11.1",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
